# electronic-trading-ecosystem

./: .gitignore  CMakeLists.txt  Readme.md  client_request.h  client_response.h  common.cpp  common_types.h  constraints.cpp  constraints.h  exchange_main.cpp  macros.h  market_update.h  me_ordere.h  rebuild_debug.sh  run_tests.sh
benchmarks/: CMakeLists.txt  Readme.md  main.cpp  results.py
build-debug/: build.ninja  sockets
common/: CMakeLists.txt  common_types.h  lf_queue.h  logging.h  macros.h  mem_pool.h  multicast_socket.cpp  multicast_socket.h  socket_utils.cpp  socket_utils.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  thread_utils.h  time_utils.h
exchange/: CMakeLists.txt  exchange_main.cpp
exchange/market_data/: market_data_publisher.cpp  market_data_publisher.h  market_update.h  snapshot_synthesizer.cpp  snapshot_synthesizer.h
exchange/matcher/: matching_engine.cpp  matching_engine.h  me_order.cpp  me_order.h  me_order_book.cpp  me_order_book.h
exchange/order_server/: client_request.h  client_response.h  fifo_sequencer.h  fifo_squencer.h  order_server.cpp  order_server.h
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  common_dummy_test.cpp
tests/exchange/: CMakeLists.txt
tests/exchange/market_data/: CMakeLists.txt  market_data_tests.cpp
trading_system/market_data/: market_data_consumer.cpp  market_data_consumer.h
